Update VideoFrame [[Detached]] to use inherited slot

--- a/index.src.html
+++ b/index.src.html
@@ -2914,11 +2914,11 @@ dictionary PlaneInit {
 :: A {{DOMRectReadOnly}} with {{DOMRectReadOnly/width}} and
     {{DOMRectReadOnly/height}} matching {{VideoFrame/codedWidth}} and
     {{VideoFrame/codedHeight}} and {{DOMRectReadOnly/x}} and
-    {{DOMRectReadOnly/y}} at (0,0). Offered for convenience for use with
+    {{DOMRectReadOnly/y}} at `(0,0)`. Offered for convenience for use with
     {{VideoFrame/allocationSize()}} and {{VideoFrame/copyTo()}}.
 
     The {{VideoFrame/codedRect}} getter steps are:
-    1. If {{VideoFrame/[[detached]]}} is `true`, return `null`.
+    1. If {{platform object/[[Detached]]}} is `true`, return `null`.
     2. Let |rect| be a new {{DOMRectReadOnly}}, initialized as follows:
         1. Assign `0` to {{DOMRectReadOnly/x}} and {{DOMRectReadOnly/y}}.
         2. Assign {{VideoFrame/[[coded width]]}} and
@@ -2931,7 +2931,7 @@ dictionary PlaneInit {
     {{VideoFrame}}.
 
     The {{VideoFrame/visibleRect}} getter steps are:
-    1. If {{VideoFrame/[[detached]]}} is `true`, return `null`.
+    1. If {{platform object/[[Detached]]}} is `true`, return `null`.
     2. Let |rect| be a new {{DOMRectReadOnly}}, initialized as follows:
         1. Assign {{VideoFrame/[[visible left]]}},
             {{VideoFrame/[[visible top]]}}, {{VideoFrame/[[visible width]]}},
