Fix merge issues

--- a/index.src.html
+++ b/index.src.html
@@ -2258,7 +2258,7 @@ dictionary AudioDataInit {
 </dfn>
 1. If |init| is not a [=valid AudioDataInit=], throw a {{TypeError}}.
 2. Let |frame| be a new {{AudioData}} object, initialized as follows:
-    1. Assign `false` to {{AudioData/[[detached]]}}.
+    1. Assign `false` to {{platform object/[[Detached]]}}.
     2. Assign |init|.{{AudioDataInit/format}} to
         {{AudioData/[[format]]}}.
     3. Assign |init|.{{AudioDataInit/sampleRate}} to
@@ -2414,10 +2414,10 @@ dictionary AudioDataInit {
 :: Run these steps:
     1. Assign `true` to |data|'s {{platform object/[[Detached]]}} internal slot.
     2. Assign `null` to |data|'s {{AudioData/[[resource reference]]}}.
-    3. Assign `0` to {{AudioData/[[sample rate]]}}.
-    4. Assign `0` to {{AudioData/[[number of frames]]}}.
-    5. Assign `0` to {{AudioData/[[number of channels]]}}.
-    6. Assign `""` to {{AudioData/[[format]]}}.
+    3. Assign `0` to |data|'s {{AudioData/[[sample rate]]}}.
+    4. Assign `0` to |data|'s {{AudioData/[[number of frames]]}}.
+    5. Assign `0` to |data|'s {{AudioData/[[number of channels]]}}.
+    6. Assign `""` to |data|'s {{AudioData/[[format]]}}.
 
 : To check if a {{AudioDataInit}} is a 
     <dfn>valid AudioDataInit</dfn>, run these steps:
