Clarify Encoder/VideoFrame alpha interaction

--- a/index.src.html
+++ b/index.src.html
@@ -1829,7 +1829,10 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
 <dt><dfn dict-member for=VideoEncoderConfig>alpha</dfn></dt>
   <dd>
     Whether the alpha component of the {{VideoFrame}} inputs should be kept
-    or discarded prior to encoding.
+    or discarded prior to encoding. If {{VideoEncoderConfig/alpha}} is
+    equal to {{AlphaOption/discard}}, alpha data is always discarded, even for
+    {{VideoFrame}}s with a {{VideoFrame/hasAlpha}} value of
+    {{AlphaOption/keep}}.
   </dd>
 
   <dt><dfn dict-member for=VideoEncoderConfig>scalabilityMode</dfn></dt>
