--- a/index.src.html
+++ b/index.src.html
@@ -2647,7 +2647,7 @@ interface VideoFrame {
   constructor(sequence<PlaneInit> planes,
               VideoFramePlaneInit init);
 
-  readonly attribute PixelFormat format;
+  readonly attribute VideoPixelFormat? format;
   readonly attribute unsigned long codedWidth;
   readonly attribute unsigned long codedHeight;
   readonly attribute DOMRectReadOnly? codedRect;
@@ -2671,7 +2671,7 @@ dictionary VideoFrameInit {
 };
 
 dictionary VideoFramePlaneInit {
-  required PixelFormat format;
+  required VideoPixelFormat format;
   [EnforceRange] required unsigned long codedWidth;
   [EnforceRange] required unsigned long codedHeight;
   DOMRectInit visibleRect;
@@ -2695,7 +2695,9 @@ dictionary PlaneInit {
     this frame.
 
 : <dfn attribute for=VideoFrame>\[[format]]</dfn>
-:: A {{PixelFormat}} describing the pixel format of the {{VideoFrame}}.
+:: A {{VideoPixelFormat}} describing the pixel format of the {{VideoFrame}}. May
+    be `null` in scenarios where the underlying format does not map to a
+    {{VideoPixelFormat}}.
 
 : <dfn attribute for=VideoFrame>[[coded width]]</dfn>
 :: Width of the {{VideoFrame}} in pixels, potentionally including non-visible
@@ -2814,7 +2816,7 @@ dictionary PlaneInit {
     |init|.
 
     ISSUE: The spec should define explicit rules for each
-        {{PixelFormat}} and reference them in the steps above. See
+        {{VideoPixelFormat}} and reference them in the steps above. See
         [#165](https://github.com/w3c/webcodecs/issues/165).
 
     NOTE: The User Agent may choose to allocate resource with a larger coded
@@ -2891,7 +2893,8 @@ dictionary PlaneInit {
 ### Attributes ###{#videoframe-attributes}
 : <dfn attribute for=VideoFrame>format</dfn>
 :: Describes the arrangement of bytes in each plane as well as the number and
-    order of the planes.
+    order of the planes.  May be `null` in scenarios where the underlying format
+    does not map to a {{VideoPixelFormat}}.
 
     The {{VideoFrame/format}} getter steps are to return
     {{VideoFrame/[[format]]}}.
@@ -2994,7 +2997,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 
     When invoked, run these steps:
     1. If {{platform object/[[Detached]]}} is `true`, return `0`.
-    2. If {{VideoFrame/[[format]]}} is `""`, throw a {{NotSupportedError}}
+    2. If {{VideoFrame/[[format]]}} is `null`, throw a {{NotSupportedError}}
         {{DOMException}}.
     3. Let |parsedOptions| be the result of running the [=Parse
         VideoFrameCopyToOptions=] algorithm with |options|.
@@ -3012,7 +3015,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 
     When invoked, run these steps:
     1. If {{platform object/[[Detached]]}} is `true`, return `0`.
-    2. If {{VideoFrame/[[format]]}} is `""`, throw a {{NotSupportedError}}
+    2. If {{VideoFrame/[[format]]}} is `null`, throw a {{NotSupportedError}}
         {{DOMException}}.
     3. Let |parsedOptions| be the result of running the [=Parse
         VideoFrameCopyToOptions=] algorithm with |options|.
@@ -3081,8 +3084,8 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
       2. Let |resource| be the [=media resource=] described by |output|.
       3. Let |resourceReference| be a reference to |resource|.
       4. Assign |resourceReference| to {{VideoFrame/[[resource reference]]}}.
-      5. If |output| uses a recognized {{PixelFormat}}, assign that format to
-          {{VideoFrame/[[format]]}}. Otherwise, assign `""` to
+      5. If |output| uses a recognized {{VideoPixelFormat}}, assign that format to
+          {{VideoFrame/[[format]]}}. Otherwise, assign `null` to
           {{VideoFrame/[[format]]}}.
       6. Let |codedWidth| and |codedHeight| be the coded width and height of the
           |output| in pixels.
@@ -3144,9 +3147,9 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     |init|,  |frame|, |resource|, |width| and |height|)
 :: 1. Assign a new reference for |resource| to |frame|'s
         {{VideoFrame/[[resource reference]]}}.
-    2. If |resource| uses a recognized {{PixelFormat}}, assign the
-        {{PixelFormat}} of |resource| to {{VideoFrame/[[format]]}}.
-    3. Otherwise, assign `""` to {{VideoFrame/[[format]]}}.
+    2. If |resource| uses a recognized {{VideoPixelFormat}}, assign the
+        {{VideoPixelFormat}} of |resource| to {{VideoFrame/[[format]]}}.
+    3. Otherwise, assign `null` to {{VideoFrame/[[format]]}}.
     4. Assign |width| to the following attributes of |frame|:
         {{VideoFrame/codedWidth}}, {{VideoFrame/displayWidth}}.
     5. Assign |height| to the following attributes of |frame|:
@@ -3173,7 +3176,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 : <dfn>Close VideoFrame</dfn> (with |frame|)
 :: 1. Assign `null` to |frame|'s {{VideoFrame/[[resource reference]]}}.
     2. Assign `true` to |frame|'s {{platform object/[[Detached]]}}.
-    3. Assign `""` to |frame|'s {{VideoFrame/format}}.
+    3. Assign `null` to |frame|'s {{VideoFrame/format}}.
     4. Assign `0` to |frame|'s {{VideoFrame/[[coded width]]}},
         {{VideoFrame/[[coded height]]}}, {{VideoFrame/[[visible left]]}},
         {{VideoFrame/[[visible top]]}}, {{VideoFrame/[[visible width]]}},
@@ -3431,7 +3434,7 @@ Pixel formats describe the arrangement of bytes in each plane as well as the
 number and order of the planes. Each format is described in its own sub-section.
 
 <xmp class='idl'>
-enum PixelFormat {
+enum VideoPixelFormat {
   // 4:2:0 Y, U, V
   "I420",
   // 4:2:0 Y, U, V, A
@@ -3469,7 +3472,7 @@ in the image that are derived from a [=sub-sampled=] sample.
 </div>
 
 <dl>
-  <dt><dfn enum-value for=PixelFormat>I420</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>I420</dfn></dt>
   <dd>
     This format is composed of three distinct planes, one plane of Luma and two
     planes of Chroma, denoted Y, U and V, and present in this order. It is also
@@ -3494,7 +3497,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     Similarly, the visible rectangle ({{VideoFrame/displayWidth}} and
     {{VideoFrame/displayHeight}}) MUST be even.
   </dd>
-  <dt><dfn enum-value for=PixelFormat>I420A</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>I420A</dfn></dt>
   <dd>
 
     This format is composed of four distinct planes, one plane of Luma, two
@@ -3521,7 +3524,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     Similarly, the visible rectangle ({{VideoFrame/displayWidth}} and
     {{VideoFrame/displayHeight}}) MUST be even.
   </dd>
-  <dt><dfn enum-value for=PixelFormat>I422</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>I422</dfn></dt>
   <dd>
 
     This format is composed of three distinct planes, one plane of Luma and two
@@ -3547,7 +3550,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     coordinates ({{VideoFrame/displayWidth}} and {{VideoFrame/displayHeight}})
     MUST be even.
   </dd>
-  <dt><dfn enum-value for=PixelFormat>I444</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>I444</dfn></dt>
   <dd>
 
     This format is composed of three distinct planes, one plane of Luma and two
@@ -3562,7 +3565,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     image, in {{VideoFrame/codedHeight}} lines of {{VideoFrame/codedWidth}}
     samples.
   </dd>
-  <dt><dfn enum-value for=PixelFormat>NV12</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>NV12</dfn></dt>
   <dd>
 
     This format is composed of two distinct planes, one plane of Luma and then
@@ -3618,7 +3621,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     All samples being linear in memory.
   </div>
   </dd>
-  <dt><dfn enum-value for=PixelFormat>RGBA</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>RGBA</dfn></dt>
   <dd>
 
     This format is composed of a single plane, that encodes four components:
@@ -3631,7 +3634,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     left in the image, in {{VideoFrame/codedHeight}} lines of
     {{VideoFrame/codedWidth}} samples.
   </dd>
-  <dt><dfn enum-value for=PixelFormat>RGBX</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>RGBX</dfn></dt>
   <dd>
 
     This format is composed of a single plane, that encodes four components:
@@ -3645,7 +3648,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     in the image, in {{VideoFrame/codedHeight}} lines of
     {{VideoFrame/codedWidth}} samples.
   </dd>
-  <dt><dfn enum-value for=PixelFormat>BGRA</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>BGRA</dfn></dt>
   <dd>
 
     This format is composed of a single plane, that encodes four components:
@@ -3658,7 +3661,7 @@ in the image that are derived from a [=sub-sampled=] sample.
     in the image, in {{VideoFrame/codedHeight}} lines of
     {{VideoFrame/codedWidth}} samples.
   </dd>
-  <dt><dfn enum-value for=PixelFormat>BGRX</dfn></dt>
+  <dt><dfn enum-value for=VideoPixelFormat>BGRX</dfn></dt>
   <dd>
 
     This format is composed of a single plane, that encodes four components:
