--- a/index.src.html
+++ b/index.src.html
@@ -2809,6 +2809,9 @@ dictionary VideoFrameBufferInit {
   // Default display dimensions match visibleRect.
   [EnforceRange] unsigned long displayWidth;
   [EnforceRange] unsigned long displayHeight;
+
+  // Defaults to Rec709 or SRGB for planar and interleaved formats respectively.
+  VideoColorSpaceInit colorSpace;
 };
 </xmp>
 
@@ -3818,6 +3821,50 @@ is its own [=equivalent opaque format=].
     {{VideoFrame/codedWidth}} samples.
   </dd>
 </dl>
+
+Video Color Space{#video-color-space}
+-------------------------------------
+
+<xmp class='idl'>
+[Exposed=(Window,DedicatedWorker)]
+interface VideoColorSpace {
+  constructor(VideoColorSpaceInit init);
+
+  readonly attribute VideoColorPrimaries? primaries;
+  readonly attribute VideoTransferCharacteristics? transfer;
+  readonly attribute VideoMatrixCoefficients? matrix;
+  readonly attribute boolean? fullRange;
+
+  // Note: [Default] implementation would be correct.
+  VideoColorSpaceInit toJSON();
+};
+
+dictionary VideoColorSpaceInit {
+  VideoColorPrimaries primaries;
+  VideoTransferCharacteristics transfer;
+  VideoMatrixCoefficients matrix;
+  boolean fullRange;
+};
+
+enum VideoColorPrimaries {
+  "bt709",      // BT.709, sRGB
+  "bt470bg",    // BT.601 PAL
+  "smpte170m",  // BT.601 NTSC
+};
+
+enum VideoTransferCharacteristics {
+  "bt709",         // BT.709
+  "smpte170m",     // BT.601 (functionally the same as bt709)
+  "iec61966-2-1",  // sRGB
+};
+
+enum VideoMatrixCoefficients {
+  "rgb",        // sRGB
+  "bt709",      // BT.709
+  "bt470bg",    // BT.601 PAL
+  "smpte170m",  // BT.601 NTSC (functionally the same as bt470bg)
+};
+</xmp>
 
 Image Decoding {#image-decoding}
 ====================================
