Small edit to wording and punctuation.

--- a/index.src.html
+++ b/index.src.html
@@ -1816,10 +1816,11 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
   <dt><dfn dict-member for=VideoEncoderConfig>framerate</dfn></dt>
   <dd>
     The expected frame rate in frames per second, if known. This value, along
-    with the frame {{VideoFrame/timestamp}} should be used by the video encoder
-    to calculate the optimal size of each encoded frame. Additionally, the value
-    should be considered a target deadline for outputting encoding chunks when
-    {{VideoEncoderConfig/latencyMode}} is set to {{LatencyMode/realtime}}.
+    with the frame {{VideoFrame/timestamp}}, should be used by the video encoder
+    to calculate the optimal byte length for each encoded frame. Additionally,
+    the value should be considered a target deadline for outputting encoding
+    chunks when {{VideoEncoderConfig/latencyMode}} is set to
+    {{LatencyMode/realtime}}.
   </dd>
 
   <dt><dfn dict-member for=VideoEncoderConfig>hardwareAcceleration</dfn></dt>
