--- a/index.src.html
+++ b/index.src.html
@@ -1830,9 +1830,8 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
   <dd>
     Whether the alpha component of the {{VideoFrame}} inputs should be kept
     or discarded prior to encoding. If {{VideoEncoderConfig/alpha}} is
-    equal to {{AlphaOption/discard}}, alpha data is always discarded, even for
-    {{VideoFrame}}s with a {{VideoFrame/hasAlpha}} value of
-    {{AlphaOption/keep}}.
+    equal to {{AlphaOption/discard}}, alpha data is always discarded, regardless
+    of a {{VideoFrame}}'s {{VideoFrame/[[format]]}}.
   </dd>
 
   <dt><dfn dict-member for=VideoEncoderConfig>scalabilityMode</dfn></dt>
@@ -1942,13 +1941,12 @@ a variety of different operations.
   <dt><dfn enum-value for=AlphaOption>keep</dfn></dt>
   <dd>
     Indicates that the user agent should preserve alpha channel data for
-    {{VideoFrame}}s, if it is present. A {{VideoFrame}}'s
-    {{VideoFrame/[[has alpha]]}} should remain untouched.
+    {{VideoFrame}}s, if it is present.
   </dd>
   <dt><dfn enum-value for=AlphaOption>discard</dfn></dt>
   <dd>
     Indicates that the user agent should ignore or remove {{VideoFrame}}'s alpha
-    channel data. {{VideoFrame}}'s {{VideoFrame/}}
+    channel data.
   </dd>
 </dl>
 
@@ -2464,7 +2462,7 @@ dictionary AudioDataInit {
     5. Assign `0` to |data|'s {{AudioData/[[number of channels]]}}.
     6. Assign `""` to |data|'s {{AudioData/[[format]]}}.
 
-: To check if a {{AudioDataInit}} is a 
+: To check if a {{AudioDataInit}} is a
     <dfn>valid AudioDataInit</dfn>, run these steps:
 :: 1. If {{AudioDataInit/sampleRate}} less than or equal to `0`, return `false`.
     2. If {{AudioDataInit/numberOfFrames}} = `0`, return `false`.
@@ -2747,7 +2745,6 @@ interface VideoFrame {
   readonly attribute unsigned long displayWidth;
   readonly attribute unsigned long displayHeight;
   readonly attribute unsigned long long? duration;  // microseconds
-  readonly attribute boolean hasAlpha;
   readonly attribute long long? timestamp;          // microseconds
   unsigned long allocationSize(
       optional VideoFrameCopyToOptions options = {});
@@ -2828,37 +2825,6 @@ dictionary PlaneInit {
 : <dfn attribute for=VideoFrame>\[[timestamp]]</dfn>
 ::  The presentation timestamp, given in microseconds. The timestamp is copied
     from the {{EncodedVideoChunk}} corresponding to this {{VideoFrame}}.
-
-: <dfn attribute for=VideoFrame>[[has alpha]]</dfn>
-::  Whether the frame has an alpha channel.
-
-    When this is `false`:
-    1. The frame must be treated as fully opaque (e.g, by any method which takes
-        a {{CanvasImageSource}}).
-    2. If {{VideoFrame/[[format]]}} is a [=planar=] {{PixelFormat}}, there must
-        not be an alpha plane.
-    3. If {{VideoFrame/[[format]]}} is instead [=interleaved=], blocks of
-        samples may contain an unused `X` channel, whose values are undefined
-        and must be ignored when rendering. The position of the `X` channel is
-        defined by {{VideoFrame/[[format]]}}, and replaces where the alpha `A`
-        channel would have been.
-
-    When this is `true`:
-    1. The frame must be treated as transparent for the pixels and degrees
-        indicated by the alpha values.
-    2. If {{VideoFrame/[[format]]}} is a [=planar=] {{PixelFormat}}, the alpha
-        plane must appear after non-alpha planes, as described by
-        {{VideoFrame/[[format]]}}. The alpha plane must therefore have the
-        highest index number.
-    3. If {{VideoFrame/[[format]]}} is instead [=interleaved=], the alpha
-        channel will appear in the `A` position, as defined by
-        {{VideoFrame/[[format]]}}.
-
-NOTE: A {{VideoFrame}} with a `false` value of {{VideoFrame/[[has alpha]]}}
-    might still be referencing a [=media resource=] which has an alpha channel.
-    In that case, instead of deleting or overwritting data, it is allowed to
-    not expose the alpha plane for [=planar=] {{PixelFormat}}, and ignore the
-    alpha values for [=interleaved=] ones, as specified above.
 
 ### Constructors ###{#videoframe-constructors}
 
@@ -3093,12 +3059,6 @@ NOTE: A {{VideoFrame}} with a `false` value of {{VideoFrame/[[has alpha]]}}
     The {{VideoFrame/duration}} getter steps are to return
     {{VideoFrame/[[duration]]}}.
 
-: <dfn attribute for=VideoFrame>hasAlpha</dfn>
-:: Whether or not the {{VideoFrame}} has an alpha channel.
-
-    The {{VideoFrame/hasAlpha}} getter steps are to return
-    {{VideoFrame/[[has alpha]]}}.
-    
 ### Internal Structures ###{#videoframe-internal-structures}
 A <dfn>parsed copyto options</dfn> is a [=struct=] that consists of:
   * A <dfn for="parsed copyto options">allocationSize</dfn> (an {{unsigned
@@ -3259,9 +3219,9 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     2. Assign a new reference for |resource| to |frame|'s
         {{VideoFrame/[[resource reference]]}}.
     3. Assign the following attributes from |otherFrame| to |frame|:
-        {{VideoFrame/format}}, {{VideoFrame/codedWidth}},
-        {{VideoFrame/codedHeight}}, {{VideoFrame/visibleRect}},
-        {{VideoFrame/displayWidth}}, {{VideoFrame/displayHeight}}.
+        {{VideoFrame/codedWidth}}, {{VideoFrame/codedHeight}},
+        {{VideoFrame/visibleRect}}, {{VideoFrame/displayWidth}},
+        {{VideoFrame/displayHeight}}.
     4. If {{VideoFrameInit/duration}} [=map/exists=] in |init|, assign it to
         |frame|.{{VideoFrame/duration}}. Otherwise, assign
         |otherFrame|.{{VideoFrame/duration}} to
@@ -3270,20 +3230,22 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
         |frame|.{{VideoFrame/timestamp}}. Otherwise, assign
         |otherFrame|.{{VideoFrame/timestamp}} to
         |frame|.{{VideoFrame/timestamp}}.
-    6. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/keep}},
-        assign |otherFrame|.{{VideoFrame/[[has alpha]]}} to
-        |frame|.{{VideoFrame/[[has alpha]]}}, or `false` otherwise.
+    7. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/discard}},
+        assign |otherFrame|.{{VideoFrame/format}}'s
+        [=equivalent opaque format=] to |frame|.{{VideoFrame/[[format]]}}.
+    8. Otherwise, assign |otherFrame|.{{VideoFrame/format}} to
+        |frame|.{{VideoFrame/[[format]]}}.
 
 : <dfn for=VideoFrame>Initialize Frame With Resource and Size</dfn> (with
     |init|,  |frame|, |resource|, |width| and |height|)
 :: 1. Assign a new reference for |resource| to |frame|'s
         {{VideoFrame/[[resource reference]]}}.
-    2. If |resource| uses a recognized {{PixelFormat}}, assign the
-        {{PixelFormat}} of |resource| to {{VideoFrame/[[format]]}}.
-    3. Otherwise, assign `""` to {{VideoFrame/[[format]]}}.
-    4. Let |alpha| be whether or not |resource| has an alpha channel.
-    5. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/keep}}, assign
-        |alpha| to |frame|.{{VideoFrame/[[has alpha]]}}, or `false` otherwise.
+    2. Let |format| be `""`.
+    3. If |resource| uses a recognized {{PixelFormat}}, assign the
+        {{PixelFormat}} of |resource| to |format|.
+    4. If |init|.{{VideoFrameInit/alpha}} is {{AlphaOption/discard}}, assign
+        |format|'s [=equivalent opaque format=] to |format|.
+    5. Assign |format| to {{VideoFrame/[[format]]}}
     6. Assign |width| to the following attributes of |frame|:
         {{VideoFrame/codedWidth}}, {{VideoFrame/displayWidth}}.
     7. Assign |height| to the following attributes of |frame|:
@@ -3605,6 +3567,11 @@ in the image that are derived from a [=sub-sampled=] sample.
   and vertical direction.
 </div>
 
+If a {{PixelFormat}} has an alpha component, the format's
+<dfn>equivalent opaque format</dfn> is the same {{PixelFormat}}, without an
+alpha component. If a {{PixelFormat}} does not have an alpha component, it is
+its own [=equivalent opaque format=].
+
 <dl>
   <dt><dfn enum-value for=PixelFormat>I420</dfn></dt>
   <dd>
@@ -3657,6 +3624,8 @@ in the image that are derived from a [=sub-sampled=] sample.
     The {{VideoFrame/codedWidth}} and {{VideoFrame/codedHeight}} MUST be even.
     Similarly, the visible rectangle ({{VideoFrame/displayWidth}} and
     {{VideoFrame/displayHeight}}) MUST be even.
+
+    {{I420A}}'s [=equivalent opaque format=] is {{I420}}.
   </dd>
   <dt><dfn enum-value for=PixelFormat>I422</dfn></dt>
   <dd>
@@ -3767,6 +3736,8 @@ in the image that are derived from a [=sub-sampled=] sample.
     (and therefore bytes) in the single plane, arranged starting at the top
     left in the image, in {{VideoFrame/codedHeight}} lines of
     {{VideoFrame/codedWidth}} samples.
+
+    {{RGBA}}'s [=equivalent opaque format=] is {{RGBX}}.
   </dd>
   <dt><dfn enum-value for=PixelFormat>RGBX</dfn></dt>
   <dd>
@@ -3794,6 +3765,8 @@ in the image that are derived from a [=sub-sampled=] sample.
     (and therefore bytes) in the single plane, arranged starting at the top left
     in the image, in {{VideoFrame/codedHeight}} lines of
     {{VideoFrame/codedWidth}} samples.
+
+    {{BGRA}}'s [=equivalent opaque format=] is {{BGRX}}.
   </dd>
   <dt><dfn enum-value for=PixelFormat>BGRX</dfn></dt>
   <dd>
