--- a/index.src.html
+++ b/index.src.html
@@ -163,7 +163,7 @@ Definitions {#definitions}
     track. The mechanism for indicating a primary track is format defined.
 
 : <dfn>RGB Format</dfn>
-:: A {{PixelFormat}} containing red, green, and blue color channels in
+:: A {{VideoPixelFormat}} containing red, green, and blue color channels in
     any order or layout (interleaved or planar), and irrespective of whether an
     alpha channel is present.
 
