Simplify null handling.

--- a/index.src.html
+++ b/index.src.html
@@ -1255,8 +1255,7 @@ Methods {#videoencoder-methods}
     5. [=Queue a control message=] to encode |frameClone|.
 
     [=Running a control message=] to encode the frame means performing these steps.
-    1. If {{VideoEncoder/[[active color space]]}} is `null`, and
-        |frame|.{{VideoFrame/colorSpace}} is not `null`, assign
+    1. If {{VideoEncoder/[[active color space]]}} is `null`, assign
         |frame|.{{VideoFrame/colorSpace}} to
         {{VideoEncoder/[[active color space]]}}.
     2. Attempt to use {{VideoEncoder/[[codec implementation]]}} to encode
