Fix copy/paste error in the AudioDecoder.decode definition

--- a/index.src.html
+++ b/index.src.html
@@ -361,7 +361,7 @@ Methods {#audiodecoder-methods}
         {{EncodingError}}.
     3. Queue a task on the [=control thread=] event loop to decrement
         {{AudioDecoder/[[decodeQueueSize]]}}.
-    4. Let |decoded outputs| be a [=list=] of decoded video data outputs emitted
+    4. Let |decoded outputs| be a [=list=] of decoded audio data outputs emitted
         by {{AudioDecoder/[[codec implementation]]}}.
     5. If |decoded outputs| is not empty, queue a task on the [=control thread=]
         event loop to run the [=Output AudioData=] algorithm with
