Fix typo to address review comments.

--- a/index.src.html
+++ b/index.src.html
@@ -1704,8 +1704,8 @@ run these steps:
   <dt><dfn dict-member for=VideoDecoderConfig>optimizeForLatency</dfn></dt>
   <dd>
     Hint that the selected decoder SHOULD be configured to minimize the number
-    of {{EncodedVideoChunk}}s that must be decoded before a {{VideoFrame}} is
-    output.
+    of {{EncodedVideoChunk}}s that have to be decoded before a {{VideoFrame}}
+    is output.
 
     NOTE: In addition to User Agent and hardware limitations, some codec
     bitstreams may require a minimum number of inputs before any output can be
