--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -159,6 +159,11 @@ ISSUE: Several registrations contain TODOs which should be replaced with links
     <td>VP9</td>
     <td>TODO (string)</td>
   </tr>
+  <tr>
+    <td>vorbis</td>
+    <td>Vorbis</td>
+    <td>[Vorbis I specification](https://xiph.org/vorbis/doc/Vorbis_I_spec.html) [[WEBCODECS-VORBIS-CODEC-REGISTRATION]]</td>
+  </tr>
 </table>
 
 Privacy and Security Considerations {#privacy-and-security-considerations}
