--- a/index.src.html
+++ b/index.src.html
@@ -1649,7 +1649,9 @@ run these steps:
     return `false`.
 5. If {{VideoDecoderConfig/displayAspectWidth}} = 0 or
     {{VideoDecoderConfig/displayAspectHeight}} = 0, return `false`.
-6. Return `true`.
+6. If {{VideoDecoderConfig/hardwareAcceleration}} is provided and its value is
+    unsupported by the User Agent, return `false`.
+7. Return `true`.
 
 <dl>
   <dt><dfn dict-member for=VideoDecoderConfig>codec</dfn></dt>
@@ -1781,7 +1783,9 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
     = 0, return `false`.
 3. If {{VideoEncoderConfig/displayWidth}} = 0 or
     {{VideoEncoderConfig/displayHeight}} = 0, return `false`.
-4. Return `true`.
+4. If {{VideoEncoderConfig/hardwareAcceleration}} is provided and its value is
+    unsupported by the User Agent, return `false`.
+5. Return `true`.
 
 <dl>
   <dt><dfn dict-member for=VideoEncoderConfig>codec</dfn></dt>
